# ObjectRecognition

./: .gitignore  README.md  package-lock.json
client/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
client/devel/include/yolo_ros/: TriggerSelection.h  TriggerSelectionRequest.h  TriggerSelectionResponse.h
client/devel/lib/pkgconfig/: yolo_ros.pc
client/devel/lib/python3/dist-packages/yolo_ros/srv/: _TriggerSelection.py  __init__.py
client/devel/lib/yolo_ros/: host_client
client/devel/share/common-lisp/ros/yolo_ros/srv/: TriggerSelection.lisp  _package.lisp  _package_TriggerSelection.lisp  yolo_ros-srv.asd
client/devel/share/gennodejs/ros/yolo_ros/srv/: TriggerSelection.js  _index.js
client/devel/share/roseus/ros/yolo_ros/: manifest.l
client/devel/share/roseus/ros/yolo_ros/srv/: TriggerSelection.l
client/devel/share/yolo_ros/cmake/: yolo_ros-msg-extras.cmake  yolo_ros-msg-paths.cmake  yolo_rosConfig.cmake
client/src/yolo_ros/: CMakeLists.txt  package.xml
client/src/yolo_ros/src/: host_client.cpp
client/src/yolo_ros/srv/: TriggerSelection.srv
ros-yolo-opencv-project3/: .gitignore  ONE_SHOT_ACTION_RECOGNITION.md  RTX5080_GPU_SETUP_LOG.md  TECHNICAL_GUIDE.md
ros-yolo-opencv-project3/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  rebuild_with_gpu.sh  setup_gpu.sh
ros-yolo-opencv-project3/src/yolo_ros/: CMakeLists.txt  package.xml
ros-yolo-opencv-project3/src/yolo_ros/launch/: action_recognition.launch  camera_only.launch  get_position.launch  test_camera.launch  unified_mode.launch  yolo_realsense.launch
ros-yolo-opencv-project3/src/yolo_ros/scripts/: get_object_position.py  interactive_object_selector.py  object_selector_server.py  one_shot_action_node.py  record_support_set.py  skeleton_extractor.py  skeleton_model.py  test_dataset_loading.py  test_skeleton_from_images.py  train_ntu_rgbd.py  yolo_subscriber.py  yolo_unified_node.py
ros-yolo-opencv-project3/src/yolo_ros/src/: host_client.cpp
ros-yolo-opencv-project3/src/yolo_ros/srv/: TriggerSelection.srv
